# kartoza-django

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml
kartoza/: asgi.py  settings.py  urls.py  wsgi.py
kartoza/kartoza/: settings.py  urls.py
kartoza/static/css/: style.css
kartoza/templates/: base.html  login.html  map.html  register.html
profiles/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_userprofile_location.py
profiles/templates/: edit_profile.html  profile.html
profiles/test_profiles/: test_views.py
src/kartoza_django/: __init__.py
